--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,11 +36,13 @@
     <div class="container">
       <%= yield %>
     </div>
-    <footer class="footer">
+    <footer class="footer bg-dark text-secondary">
       <%= image_tag 'https://open.fda.gov/img/l_openFDA.png', alt: 'openFDA Logo', width: '150', height: '30' %>
       <p>
         Thanks and credit for the drug information present in this application belong to <a href="https://open.fda.gov/">openFDA</a>.<br>
-        See <a href="https://open.fda.gov/apis/">API documentation</a> for more details.
+        See <a href="https://open.fda.gov/apis/">API documentation</a> for more details.<br>
+        Gaby Mendez | Ruthie Rabinovich | Jessye Ejdelman | Michael Evans<br>
+        Turing -- September 2020
       </p>
     </footer>
   </body>
