--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,8 @@
 
 html, body {
  height: 100%;
+ font-size: 16px;
+ line-height: 22px;
 }
 
 p {
@@ -49,8 +51,14 @@ body {
 
 .footer {
   text-align: center;
-  margin-bottom: 20px;
-  // background-color: blue;
+  margin: 80px 0 0px 0;
+  font-size: .7em;
+  line-height: 1.5em;
+  padding: 20px 0 20px 0;
+}
+
+.footer p {
+  margin-top: 10px;
 }
 
 h1, h2, h3, h4, h5 {
