--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,15 +1,37 @@
-<center>
-  <h1>Edit Profile</h1>
+<div class="container">
+
+  <div class="page-header">
+    <h3>Edit Profile</h3>
+  </div>
   <%= render partial: '/partials/flash' %>
-  <%= form_tag "/users/#{current_user.id}", method: :patch do %>
-    <%= label_tag :first_name %><br>
-    <%= text_field_tag :first_name, "#{current_user.first_name}" %><br><br>
-    <%= label_tag :last_name %><br>
-    <%= text_field_tag :last_name, "#{current_user.last_name}" %><br><br>
-    <%= label_tag :birthdate, 'Birthdate (Optional)' %><br>
-    <%= text_field_tag :birthdate, "#{current_user.birthdate}", placeholder: 'YYYY-MM-DD' %><br><br>
-    <%= label_tag :weight, 'Weight in lbs (Optional)' %><br>
-    <%= number_field_tag :weight, "#{current_user.weight}" %><br><br>
-    <%= submit_tag 'Save' %>
-  <% end %>
-</center>
+
+  <div class="edit-form">
+    <%= form_tag "/users/#{current_user.id}", method: :patch do %>
+
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="first_name">First Name</label>
+        <input type="text" name="first_name" id="first_name" class="form-control" placeholder="First Name" value=<%= "#{current_user.first_name}" %>>
+      </div>
+      <div class="form-group col-md-6">
+        <label for="last_name">Last Name</label>
+        <input type="text" name="last_name" id="last_name" class="form-control" placeholder="Last Name" value=<%= "#{current_user.last_name}" %>>
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="birthdate">Date of Birth (optional)</label>
+        <input type="text" name="birthdate" id="birthdate" class="form-control" placeholder="YYYY-MM-DD" value=<%= "#{current_user.birthdate}" %>>
+      </div>
+      <div class="form-group col-md-6">
+        <label for="weight">Weight (in lbs, optional)</label>
+        <input type="text" name="weight" id="weight" class="form-control" placeholder="lbs" value=<%= "#{current_user.weight}" %>>
+      </div>
+    </div>
+    <div class="page-options">
+      <a href="/dashboard" class="btn btn-outline-primary">Cancel</a>
+      <%= submit_tag 'Save', class: "btn btn-primary" %>
+    </div>
+    <% end %>
+  </div>
+</div>
