--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,9 @@
-<!-- welcome/index.html.erb -->
-<div class="root-header">
-  <h1>Welcome to MSET</h1>
-</div>
-<div class="subheader"
-  <p>Hello. I am your virtual pharmaceutical friend.</p>
-  <a href="/auth/google_oauth2" class="btn btn-primary">Get Started with Google Login</a>
-</div>
+<% cache do %>
+  <div class="root-header">
+    <h1>Welcome to MSET</h1>
+  </div>
+  <div class="subheader">
+    <p>Your virtual pharmaceutical friend</p>
+    <a href="/auth/google_oauth2" class="btn btn-primary">Get Started with Google Login</a>
+  </div>
+<% end %>
