--- a/app/views/medications/show.html.erb
+++ b/app/views/medications/show.html.erb
@@ -1,9 +1,9 @@
-<h3>Medication information</h3>
-<%= button_to 'Delete Medication from my List', '/medications/delete', params: {id: @medication.id, brand_name: @medication.brand_name, product_ndc: @medication.product_ndc}, method: :delete %>
+<h3>Medication Information</h3>
+<%= button_to 'Delete Medication from My List', '/medications/delete', params: {id: @medication.id, brand_name: @medication.brand_name, product_ndc: @medication.product_ndc}, class: "btn btn-primary", method: :delete %><br>
 <p>Brand Name: <%= @medication.brand_name %></p>
 <p>Product NDC: <%= @medication.product_ndc %></p>
 <% unless @medication.symptoms.empty? %>
-  <div class="side-effects"</div>
+  <div class="side-effects">
   <h4>Potential Side Effects:</h4>
   <% @medication.symptoms.each do |symptom| %>
     <ul>
