--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -53,13 +53,10 @@
           </div>
         </div>
         <div class="form-row">
-          <div class="col-sm">
+          <div class="col-sm-8">
             <%= text_field_tag :symptom, nil, placeholder: 'Search Symptoms', class: "form-control" %>
           </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-sm">
+          <div class="col-sm-1">
             <%= submit_tag 'Search for Symptom', class: "btn btn-primary" %>
           </div>
         </div>
