--- a/app/assets/stylesheets/dashboard/index.scss
+++ b/app/assets/stylesheets/dashboard/index.scss
@@ -123,11 +123,15 @@ input[type="datetime-local" i] {
   flex-direction: row;
   // width: 90%;
 }
-.med-form input {
-  // margin-right: 10px;
-}
 
 .med-form {
-
   width: 70%;
+}
+
+.side-effects {
+  margin-top: 30px;
+}
+
+.side-effects h4 {
+  margin-bottom: 20px;
 }
