--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -43,7 +43,7 @@
   <div class="main">
     <% cache do %>
       <div class="log-form">
-        <h4>Log a Symptom</h4><br>
+        <h4>Log a Symptom</h4>
         <div class="form">
           <%= form_tag symptoms_search_path, method: :get do %>
           <div class="form-row">
