--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
     <h1>Welcome to MSET</h1>
   </div>
   <div class="subheader">
-    <p>Your virtual pharmaceutical friend</p>
+    <p>Take control of your medical treatment by tracking various medications and supplements with their associated side effects, and get a holistic view of your overall wellbeing!</p>
     <a href="/auth/google_oauth2" class="btn btn-primary">Get Started with Google Login</a>
   </div>
 <% end %>
