--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="dash-header">
   <h3>Welcome, <%= current_user.full_name %>! </h3>
 </div>
@@ -71,4 +72,5 @@
       <a href="/logs" class="btn btn-primary">See All Logs</a>
     </div>
   </div>
+</div>
 </div>
