--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,20 +38,40 @@ body {
 }
 
 .navbar {
-  margin-bottom: 30px;
-  // background-color: #444;
-  // color: white;
+  // margin-bottom: 30px;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  flex: 1 0 auto;
+  flex-grow: 1;
+  margin: 60px;
+}
+
+.welcome-container {
+  display: flex;
+  height: 100%;
+  background: image-url('bg4@2x.png');
+  background-size: cover;
+  justify-content: center;
+}
+
+.welcome-content {
+  height: 100%;
+  // min-width: 343px;
+  // max-width: 800px;
+  width: 85%;
+  // align-self: left;
+  // background-color: white;
+  margin-top: 100px;
+}
+
+.subheader {
+  min-width: 400px;
 }
 
 .footer {
   text-align: center;
-  margin: 80px 0 0px 0;
   font-size: .7em;
   line-height: 1.5em;
   padding: 20px 0 20px 0;
@@ -65,5 +85,4 @@ h1, h2, h3, h4, h5 {
   font-weight: bold;
 }
 
-@import "welcome";
 @import "dashboard";
