Change fda logo back to internal asset

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
     <% cache do %>
       <footer class="footer bg-dark text-secondary">
-        <%= image_tag 'https://open.fda.gov/img/l_openFDA.png', alt: 'openFDA Logo', width: '150', height: '30' %>
+        <%= image_tag 'open_fda_logo.png', alt: 'openFDA Logo', width: '150' %>
         <p>
           Thanks and credit for the drug information present in this application belong to <a href="https://open.fda.gov/">openFDA</a>.<br>
           See <a href="https://open.fda.gov/apis/">API documentation</a> for more details.<br>
